# rust-sandbox

./: README.md
UnitySimple/Assets/Plugins/: NativeMethods.g.cs
UnitySimple/Assets/Plugins/macOS/: unity_rsgen_sample.bundle
UnitySimple/Assets/Scenes/: SampleScene.unity
UnitySimple/Assets/Scripts/: NewBehaviourScript.cs
UnitySimple/ProjectSettings/: ProjectSettings.asset
rust-playgrounds/dotnet/: NativeMethods.g.cs
rust-playgrounds/unity_rsgen_sample/: Cargo.toml  build.rs
rust-playgrounds/unity_rsgen_sample/src/: lib.rs  lib_other_func.rs
rust-playgrounds/unity_rsgen_sample/src/lib_other_func/: lib_other_func.rs
rust-playgrounds/unity_rsgen_sample_cli/: Cargo.toml
rust-playgrounds/unity_rsgen_sample_cli/src/: main.rs
