[package]
name = "unity_rsgen_sample"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
# unity_rsgen_sample_cliから使うため、libを追加しておく.WinodwsとAndroidはcdylibにする。iOSとmacOSはdylibにする。
crate-type = ["staticlib","cdylib","lib"]

[package.metadata.docs.rs]
targets = [
    # android
    "aarch64-linux-android",
    # desktop
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    #m1 mac
    "aarch64-apple-darwin",
    #intel mac
    "x86_64-apple-darwin",
    #iOS
    "aarch64-apple-ios",
    "x86_64-apple-ios",
]

[build-dependencies]
csbindgen = "1.7.3"